--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ let lastSpawn = 0;
 
 let stoneCounter = 0;
 let silverCounter = 0;
-let totalSilverDestroyed = 0; // gold spawn için
+let totalSilverDestroyed = 0;
 
 class Rock {
   constructor(type){
@@ -103,10 +103,8 @@ class Rock {
   draw(){ ctx.drawImage(images[this.type],this.x,this.y,this.size,this.size); }
 }
 
-function spawnRock() {
-  rocks.push(new Rock("stone")); // başlangıçta sadece stone
-}
-
+// Başlangıçta sadece stone spawn
+function spawnRock() { rocks.push(new Rock("stone")); }
 function spawnSilver() { rocks.push(new Rock("silver")); }
 function spawnGold() { rocks.push(new Rock("gold")); }
 
@@ -127,11 +125,10 @@ canvas.addEventListener("click",(e)=>{
         kazimGucu+=0.0000000010;
         silverCounter++;
         totalSilverDestroyed++;
-        if(totalSilverDestroyed >= 30){ spawnGold(); totalSilverDestroyed=0; }
+        if(totalSilverDestroyed>=30){ spawnGold(); totalSilverDestroyed=0; }
       }
       if(rock.type==="gold"){ kazimGucu+=0.0000000100; }
       if(rock.type==="red"){ kazimGucu*=0.5; }
-
       rocks.splice(i,1);
     }
   });
@@ -146,13 +143,10 @@ function update(){
   rocks.forEach(r=>r.update());
   rocks = rocks.filter(r=>r.y<canvas.height);
 
-  if(Date.now()-lastSpawn>1500){ // stone spawn aralığı
-    spawnRock();
-    lastSpawn=Date.now();
-  }
+  if(Date.now()-lastSpawn>1500){ spawnRock(); lastSpawn=Date.now(); }
 
-  // Red taş random spawn
-  if(Math.random()<0.03){ rocks.push(new Rock("red")); }
+  // RED taş eskisi gibi: her update döngüsünde küçük ihtimalle 1 tane spawn
+  if(Math.random()<0.015){ rocks.push(new Rock("red")); }
 }
 
 function draw(){
@@ -164,10 +158,7 @@ function draw(){
 
 function loop(){ update(); draw(); requestAnimationFrame(loop); }
 
-// Çekim Sistemi ve TRX modal Sürüm 1’den korunacak
-// (Kodu daha önce gönderdiğimiz şekilde buraya ekleyebilirsin)
-
-// TRX Modal ve reklam başlatma mantığı
+// TRX modal ve reklam sistemi (Sürüm 1 mantığı korunuyor)
 const trxModalEl=document.getElementById("trxModal");
 const copyTrxBtn=document.getElementById("copyTrx");
 const trxContinueBtn=document.getElementById("trxContinueBtn");
